<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/contacts_icon"
            android:id="@+id/imageView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/buttonInsertar" android:drawingCacheQuality="high"/>
    <Button
            android:text="@string/button_Ingresar"
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:id="@+id/buttonInsertar" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="onclickButtonInsertar" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintBottom_toTopOf="@+id/buttonModify"/>
    <Button
            android:text="@string/button_modify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonModify"
            app:layout_constraintEnd_toEndOf="@+id/buttonInsertar"
            app:layout_constraintStart_toStartOf="@+id/buttonInsertar" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/buttonInsertar"
            app:layout_constraintBottom_toTopOf="@+id/buttonEliminar" android:onClick="onclickButtonModificar"/>
    <Button
            android:text="@string/button_eliminar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonEliminar"
            app:layout_constraintEnd_toEndOf="@+id/buttonModify"
            app:layout_constraintStart_toStartOf="@+id/buttonModify" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/buttonModify"
            app:layout_constraintBottom_toTopOf="@+id/buttonConsultarId" android:onClick="onclickButtonEliminar"/>
    <Button
            android:text="@string/button_consultarid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonConsultarId" app:layout_constraintEnd_toEndOf="@+id/buttonEliminar"
            app:layout_constraintStart_toStartOf="@+id/buttonEliminar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/buttonEliminar"
            app:layout_constraintBottom_toTopOf="@+id/buttonConsultar" android:onClick="onclickButtonConsultarId"/>
    <Button
            android:text="@string/button_consultar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonConsultar"
            app:layout_constraintTop_toBottomOf="@+id/buttonConsultarId"
            app:layout_constraintEnd_toEndOf="@+id/buttonConsultarId"
            app:layout_constraintStart_toStartOf="@+id/buttonConsultarId" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.5"
            android:onClick="onclickButtonConsultar"/>
</androidx.constraintlayout.widget.ConstraintLayout>